// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global component extracts the styles rather than inlines it 1`] = `
{
  "css": ".ssr-1lrxbo5{color:hotpink;}html{color:green;}",
  "html": "<div class="ssr-1lrxbo5"></div>",
  "ids": [
    "1lrxbo5",
    "1vwj31w",
  ],
}
`;

exports[`extracted rules have correct keys when dealing with multiple caches 1`] = `
[
  {
    "css": ".ssr-first-key-1j7dx2f{color:rebeccapurple;}",
    "html": "<div class="ssr-first-key-1j7dx2f"></div>",
    "ids": [
      "1j7dx2f",
    ],
  },
  {
    "css": ".ssr-second-key-1j7dx2f{color:rebeccapurple;}",
    "html": "<div class="ssr-second-key-1j7dx2f"></div>",
    "ids": [
      "1j7dx2f",
    ],
  },
]
`;

exports[`it works 1`] = `
{
  "css": ".ssr-1lrxbo5{color:hotpink;}",
  "html": "<div class="ssr-1lrxbo5"></div>",
  "ids": [
    "1lrxbo5",
  ],
}
`;
